Fix: changed sidebar-list overflow to auto

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -532,7 +532,7 @@ body {
 
 .sidebar-list {
   height: calc(100% - 74px);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .sidebar-list__item {
